--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Website
+name: Deploy to S3
 
 on:
   push:
@@ -7,24 +7,41 @@ on:
 
 jobs:
   deploy:
-    environment: prod
     runs-on: ubuntu-latest
+
+    env:
+      AWS_REGION: ap-south-1
+      BUCKET_NAME: simonphilip.cloud
+
     steps:
-      - name: Checkout Repo
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v2
+      - name: Setup Node
+        uses: actions/setup-node@v3
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-south-1
+          node-version: '18'
 
-      - name: Upload to S3
-        run: aws s3 sync src/ s3://simonphilip.cloud --delete
+      - name: Install dependencies
+        run: npm install
 
+      - name: Build and export static site
+        run: npm run build
+
+      - name: Sync to S3
+        uses: jakejarvis/s3-sync-action@master
+        with:
+          args: --delete
+        env:
+          AWS_S3_BUCKET: ${{ env.BUCKET_NAME }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ env.AWS_REGION }}
+          SOURCE_DIR: ./out
+          
       - name: Invalidate CloudFront Cache
-        run: |
-          aws cloudfront create-invalidation \
-            --distribution-id ${{ secrets.CF_DISTRIBUTION_ID }} \
-            --paths "/*"
+              run: |
+                aws cloudfront create-invalidation \
+                  --distribution-id ${{ secrets.CF_DISTRIBUTION_ID }} \
+                  --paths "/*"
+
