--- a/package.json
+++ b/package.json
@@ -45,10 +45,13 @@
     "date-fns": "^2.28.0",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "latest",
+    "html2pdf.js": "^0.10.3",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
+    "openai": "^4.93.0",
+    "puppeteer": "^24.6.1",
     "react": "^18",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
