--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-amplify/backend": "^1.14.3",
     "@aws-sdk/client-secrets-manager": "^3.787.0",
     "@aws-sdk/credential-provider-node": "^3.787.0",
     "@emotion/is-prop-valid": "latest",
@@ -41,6 +42,7 @@
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "autoprefixer": "^10.4.20",
+    "aws-amplify": "^6.14.2",
     "aws-sdk": "^2.1692.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
